--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -126,6 +126,11 @@ de:
       legend: 'New company'
       button: 'Save'
       button_send: 'Saving...'
+    edit:
+      title: 'Badger · Edit company'
+      legend: 'Edit company'
+      button: 'Save'
+      button_send: 'Saving...'
 # app/controller/companies & model
     controller:
       company_added: 'Company added.'
