--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -117,6 +117,11 @@ nl:
       legend: 'Nieuw bedrijf'
       button: 'Opslaan'
       button_send: 'Opslaan...'
+    edit:
+      title: 'Badger · Wijzig bedrijf'
+      legend: 'Wijzig bedrijf'
+      button: 'Opslaan'
+      button_send: 'Opslaan...'
 # app/controller/companies & model
     controller:
       company_added: 'Bedrijf toegevoegd.'
