--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -57,6 +57,11 @@ en:
     test_price: 'Test price'
     repair_price: 'Repair price'
     scrap_price: 'Scrap price'
+    name: 'Name'
+    amount: 'Amount'
+    amount_per_app: 'Amount per app'
+    minimum: 'Minimum'
+    send_mail: 'Send mail?'
 ######################
 ##     /GLOBALS     ##
 ######################
@@ -327,6 +332,30 @@ en:
       type_added: 'Type added.'
       type_updated: 'Type updated.'
       type_deleted: 'Type deleted.'
+
+# app/views/stocks
+  stock:
+    index:
+      title: 'Badger · Stock for '
+      legend: 'Stock for '
+      empty_list: 'No stock here'
+      add_stock: 'Add stock'
+    new:
+      title: 'Badger · New stock'
+      legend: 'New stock'
+      button: 'Save'
+      button_send: 'Saving...'
+    edit:
+      title: 'Badger · Edit stock'
+      legend: 'Edit stock'
+      button: 'Save'
+      button_send: 'Saving...'
+
+# app/controllers/stocks & model
+    controller:
+      stock_added: 'Stock added.'
+      stock_updated: 'Stock updated.'
+      stock_deleted: 'Stock deleted.'
 
 # app/views/users
   user:
