--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -8,9 +8,10 @@ de:
     users: 'Nützer'
     appliances: 'Geräte'
     classes: 'Klassen'
-    history: 'Geschichte'
     broadcasts: 'Broadcasts'
     companies: 'Geschäfte'
+    entries: 'Entries'
+    stats: 'Stats'
 
     unauthorized: 'Du hast keine Genehmigung.'
     unauth_admin: 'Du hast keine Verwaltungsrechte.'
@@ -63,6 +64,9 @@ de:
     amount_per_app: 'Amount per app'
     minimum: 'Minimum'
     send_mail: 'Send mail?'
+    shipment: 'shipment'
+    expectance: 'Delivered'
+    current: 'Currently entered'
 ######################
 ##     /GLOBALS     ##
 ######################
@@ -331,6 +335,23 @@ de:
       type_added: 'Type added.'
       type_updated: 'Type updated.'
       type_deleted: 'Type deleted.'
+
+# app/views/shipments
+  shipment:
+    index:
+      title: 'Badger · Shipments for '
+      legend: 'Shipments for '
+      empty_list: 'No shipments here'
+      add_stock: 'Add shipment'
+    new:
+      title: 'Badger · New shipment'
+      legend: 'New shipment'
+      button: 'Save'
+      button_send: 'Saving...'
+
+# app/controllers/shipments & model
+    controller:
+      shipment_added: 'Shipment added.'
 
 # app/views/stocks
   stock:
